--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.4.1",
     "next": "^9.3.4",
+    "next-seo": "^4.4.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
