--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.4.1",
-    "next": "^10.0.0",
+    "next": "^10.0.5",
     "next-seo": "^4.4.0",
     "node-sass": "^4.13.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "preact": "^10.5.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
